// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GenericSelectField  should render  snapshots for  loading items 1`] = `
<WithStyles(FormControl)
  fullWidth={true}
>
  <WithStyles(InputLabel)>
    Select item
  </WithStyles(InputLabel)>
  <WithStyles(Select)
    autoWidth={false}
    disabled={true}
    displayEmpty={true}
    error={false}
    multiple={false}
    onChange={[Function]}
    value=""
  >
    <WithStyles(MenuItem)
      key="1"
      value="Item 1"
    >
      Item 1
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      key="2"
      value="Item 2"
    >
      Item 2
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      key="3"
      value="Item 3"
    >
      Item 3
    </WithStyles(MenuItem)>
  </WithStyles(Select)>
</WithStyles(FormControl)>
`;

exports[`GenericSelectField  should render  snapshots for  no items 1`] = `
<WithStyles(FormControl)
  fullWidth={true}
>
  <WithStyles(InputLabel)>
    Select item
  </WithStyles(InputLabel)>
  <WithStyles(Select)
    autoWidth={false}
    displayEmpty={true}
    error={false}
    multiple={false}
    onChange={[Function]}
    value=""
  />
</WithStyles(FormControl)>
`;

exports[`GenericSelectField  should render  snapshots for  one item 1`] = `
<WithStyles(FormControl)
  fullWidth={true}
>
  <WithStyles(InputLabel)>
    Select item
  </WithStyles(InputLabel)>
  <WithStyles(Select)
    autoWidth={false}
    displayEmpty={true}
    error={false}
    multiple={false}
    onChange={[Function]}
    value=""
  >
    <WithStyles(MenuItem)
      key="1"
      value="Item 1"
    >
      Item 1
    </WithStyles(MenuItem)>
  </WithStyles(Select)>
</WithStyles(FormControl)>
`;
